
$Id$
$Source$

2004-10-11 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: typos and XHTML validity, thanks to Cedric Corazza
    * libraries/export/sql.php: bug #1039639: under mysqli, some field types
      were wrongly exported as binary

2004-10-11 Michal Čihař  <michal@cihar.com>
    * tbl_query_box.php: Don't try to replace %t and %f when table name is empty.

2004-10-08 Garvin Hicking <pma@supergarv.de>
    * lots of files: Adjusted superfluous spaces, added
      more CSS-ID attributes for better themeability.

2004-10-04 Michal Čihař  <michal@cihar.com>
    * tbl_query_box.php: Reenabled %f substitution.

2004-10-02 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_alter.php: field structure changes not applied (CVS version only)
    * export.php: bug #1038804, insufficient space to save

2004-09-30 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_addfield.php: bug #1037744 (CVS version only): cannot add a field
    * tbl_create.php: cannot create a new table (CVS version only)

2004-09-29 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php, libraries/common.lib.php: bug #1036678, incorrect appending
      of LIMIT to queries, and bug #1037004, UPDATE statement not showing
    * tbl_properties_operations.php: bug #1035524, cannot add comments to table

2004-09-29 Michal Čihař  <michal@cihar.com>
    * tbl_addfield.php, tbl_create.php, tbl_properties.inc.php, lang/*: Better
      wording when adding fields (bug #991096).
    * tbl_query_box.php, lang/*: Not translated text (bug #1010656).
    * themes.php, lang/*: Not translated text (bug #1016610).
    * tbl_properties_structure.php: Use also $strAddFields (as suggested by
      Marc).

2004-09-28 Alexander M. Turek  <me@derrabus.de>
    * libraries/dbi/mysql.dbi.lib.php: Compatibility fix for php < 4.3
      (bug #1033360), thanks to Claude Theroux.
    * lang/chinese_traditional-*.inc.php: Updates, thanks to Siu Sun.